# LiDAR-RT

./: .gitignore  .gitmodules  LICENSE  README.md  eval.py  pyproject.toml  requirements.txt  train.py  viewer.py
configs/: base.yaml  exp.yaml
configs/kitti360/: kitti_base.yaml
configs/kitti360/dynamic/: 1.yaml  2.yaml  3.yaml  4.yaml  5.yaml  6.yaml
configs/kitti360/static/: 1.yaml  2.yaml  3.yaml  4.yaml
configs/waymo/: waymo_base.yaml
configs/waymo/dynamic/: 1.yaml  2.yaml  3.yaml  4.yaml  segment-lists.txt
configs/waymo/static/: 1.yaml  2.yaml  3.yaml  4.yaml  segment-lists.txt
docs/: EVAL.md  INSTALL.md  TRAIN.md
lib/arguments/: __init__.py  config.py
lib/dataloader/: __init__.py  gs_loader.py
lib/dataloader/kitti_loader/: __init__.py
lib/dataloader/waymo_loader/: __init__.py
lib/dataloader/waymo_loader/waymo_protobuf/: dataset_pb2.py  label_pb2.py
lib/dataloader/waymo_loader/waymo_protobuf/protos/: keypoint_pb2.py  map_pb2.py  vector_pb2.py
lib/gaussian_renderer/: __init__.py
lib/scene/: __init__.py  bounding_box.py  cameras.py  dataset_readers.py  gaussian_model.py  lidar_sensor.py  unet.py
lib/utils/: base_utils.py  camera_utils.py  cfg_utils.py  console_utils.py  general_utils.py  graphics_utils.py  image_utils.py  kitti_utils.py  loss_utils.py  metric_utils.py  other_utils.py  primitive_utils.py  record_utils.py  system_utils.py
lib/utils/chamfer3D/: dist_chamfer_3D.py
submodules/diff-lidar-tracer/: .gitignore  CMakeLists.txt  ext.cpp  setup.py  trace_surfels.cpp  trace_surfels.h
submodules/diff-lidar-tracer/CMake/: FindOptiX7.cmake  FindTorch.cmake  PTXUtilities.cmake
submodules/diff-lidar-tracer/diff_lidar_tracer/: __init__.py
submodules/diff-lidar-tracer/optix_tracer/: CMakeLists.txt  auxiliary.h  backward.cu  common.cpp  common.h  config.h  forward.cu  optix_wrapper.cpp  optix_wrapper.h  params.h
